--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style/style.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EC2WYLGK0N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-EC2WYLGK0N");
+    </script>
   </head>
   <body>
     <div class="profile">
@@ -28,59 +42,78 @@
     </div>
 
     <ul class="social">
-        <li>
-            <a href="#" target="_blank">
-                <img src="./assets/images/youtube.png" alt="youtube">
-            </a>
-        </li>
-        <li>
-            <a href="#" target="_blank">
-                <img src="./assets/images/insta.svg" alt="instagram">
-            </a>
-        </li>
-        <li>
-            <a href="#" target="_blank">
-                <img src="./assets/images/linkedin.svg" alt="linkedin">
-            </a>
-        </li>
-        <li>
-            <a href="#" target="_blank">
-                <img src="./assets/images/github.svg" alt="github">
-            </a>
-        </li>
-        <li>
-            <a href="https://wa.me/5581991518998" target="_blank">
-                <img src="./assets/images/whatsapp.png" alt="whatsapp">
-            </a>
-        </li>
+      <li>
+        <a href="#" target="_blank">
+          <img src="./assets/images/youtube.png" alt="youtube" />
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <img src="./assets/images/insta.svg" alt="instagram" />
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <img src="./assets/images/linkedin.svg" alt="linkedin" />
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank">
+          <img src="./assets/images/github.svg" alt="github" />
+        </a>
+      </li>
+      <li>
+        <a href="https://wa.me/5581991518998" target="_blank">
+          <img src="./assets/images/whatsapp.png" alt="whatsapp" />
+        </a>
+      </li>
     </ul>
 
     <ul class="links-list">
-        <li>
-            <a href="">
-                <h4>Lorem ipsum dolor sit amet </h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit velit consequuntur officiis quibusdam fugit sapiente ducimus harum reprehenderit vitae.</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <h4>Lorem ipsum dolor sit amet </h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit velit consequuntur officiis quibusdam fugit sapiente ducimus harum reprehenderit vitae.</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <h4>Lorem ipsum dolor sit amet </h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit velit consequuntur officiis quibusdam fugit sapiente ducimus harum reprehenderit vitae.</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <h4>Lorem ipsum dolor sit amet </h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit velit consequuntur officiis quibusdam fugit sapiente ducimus harum reprehenderit vitae.</p>
-            </a>
-        </li>
+      <li>
+        <a href="">
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia
+            cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit
+            velit consequuntur officiis quibusdam fugit sapiente ducimus harum
+            reprehenderit vitae.
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia
+            cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit
+            velit consequuntur officiis quibusdam fugit sapiente ducimus harum
+            reprehenderit vitae.
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia
+            cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit
+            velit consequuntur officiis quibusdam fugit sapiente ducimus harum
+            reprehenderit vitae.
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia
+            cumque eius nesciunt, modi, tenetur quos optio laboriosam vero odit
+            velit consequuntur officiis quibusdam fugit sapiente ducimus harum
+            reprehenderit vitae.
+          </p>
+        </a>
+      </li>
     </ul>
-
   </body>
 </html>
